# rust-path-tracer

./: .gitignore  Cargo.toml  LICENSE
src/: geom.rs  img.rs  main.rs  math.rs  renderer.rs  sample.rs  scene.rs
src/geom/: core.rs  mod.rs
src/prim/: core.rs  mod.rs
