[package]
name = "path-tracer"
version = "0.1.0"
authors = ["Noam Raz <noamraz8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.7"
rand = "0.7.3"
rayon = "1.5.0"
quicli = "0.4.0"
structopt = "0.3.20"
